--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
                             <p id="p2"></p>
                             <p id="p3"></p> -->
 
+    <!-- 4_user_input.js    <label for="" id="mylabel">enter your name</label><br>
+                            <input type="text" id="mytext"><br>
+                            <button type="button" id="mybutton">submit</button> -->
 
-    <script src="2_variable.js"></script>
+
+    <script src="7_math_methods.js"></script>
 
 
 
