--- a/index.html
+++ b/index.html
@@ -17,8 +17,25 @@
                             <input type="text" id="mytext"><br>
                             <button type="button" id="mybutton">submit</button> -->
 
+    <!-- 8_hypotenuse_calculator.js      <label id="alabel">side a:</label><br>
+                                         <input type="text" id="atextbox"><br>
+                                           <label id="blabel">side b:</label><br>
+                                          <input type="text" id="btextbox"><br>
+                                         <button type="button" id="submitbutton">submit</button><br>
+                                          <label id="clabel"></label><br> -->
 
-    <script src="7_math_methods.js"></script>
+    <!-- 9_counter_program.js       <label id="countlabel">0</label><br>
+                                     <button id="decrease">decrease</button><br>
+                                      <button id="reset">reset</button><br>
+                                     <button id="increase">increase</button> -->
+
+    <!-- 10_random_number_generator.js      <label id="xlabel"></label><br>
+                                             <label id="ylabel"></label><br>
+                                            <label id="zlabel"></label><br>
+                                            <button type="button" id="roll">roll</button> -->
+            
+
+    <script src="10_random_number_gemerator.js"></script>
 
 
 
