--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                             <button type="button" id="roll">roll</button> -->
             
 
-    <script src="10_random_number_gemerator.js"></script>
+    <script src="13_method_chaining.js"></script>
 
 
 
