--- a/index.html
+++ b/index.html
@@ -33,9 +33,18 @@
                                              <label id="ylabel"></label><br>
                                             <label id="zlabel"></label><br>
                                             <button type="button" id="roll">roll</button> -->
-            
+         
+    <!-- 15_checked_property         <label for="checkbox">subscribe</label>                                        
+                                    <input type="checkbox" id="checkbox"><br>
+                                    <label for="visa">visa</label>                                        
+                                    <input type="radio" name="card" id="visa"><br>
+                                    <label for="master">master</label>                                        
+                                    <input type="radio" name="card" id="master"><br>
+                                    <label for="paypal">paypal</label>                                        
+                                    <input type="radio" name="card" id="paypal"><br>
+                                    <button id="button">submit</button>                                         -->
 
-    <script src="13_method_chaining.js"></script>
+    <script src="15_checked_property.js"></script>
 
 
 
