--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                     <input type="radio" name="card" id="paypal"><br>
                                     <button id="button">submit</button>                                         -->
 
-    <script src="15_checked_property.js"></script>
+    <script src="23_break_continue.js"></script>
 
 
 
