--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
                                     <input type="radio" name="card" id="paypal"><br>
                                     <button id="button">submit</button>                                         -->
 
-    <script src="23_break_continue.js"></script>
+    <!-- 24_nested_loop.js          <label id="rectangle"></label> -->
+
+    <!-- 29_template_literals.js    <label id="label"></label> -->
+
+    <!-- 31_number_guessing_game.js     <h1>number_guessing_game</h1>
+                                        <p>pick a # between 1 - 10</p>
+                                        <label >enter a guess</label>
+                                        <input id="guess">
+                                        <input type="submit" id="submit"> -->
+
+
+    <script src="31_number_guessing_game.js"></script>
 
 
 
