--- a/index.html
+++ b/index.html
@@ -54,8 +54,17 @@
                                         <input id="guess">
                                         <input type="submit" id="submit"> -->
 
+    <!-- 32_temperature_conversation_program.js     <label >enter a temperature</label><br>
+                                                    <input type="text" id="box"><br>
+                                                    <label >convert to :</label><br>
+                                                    <input type="radio" id="cel" name="unit">
+                                                     <label >celsius</label><br>
+                                                     <input type="radio" id="far" name="unit">
+                                                    <label >fahrenheit</label><br>
+                                                    <button type="button" id="submit">submit</button>
+                                                    <label id="label"></label> -->
 
-    <script src="31_number_guessing_game.js"></script>
+    <script src="36_2D_array.js"></script>
 
 
 
