--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
                                                     <button type="button" id="submit">submit</button>
                                                     <label id="label"></label> -->
 
-    <script src="36_2D_array.js"></script>
+    <!-- 39_callback.js <label id="label"></label> -->
+
+
+    <script src="44_sort_array_of_number.js"></script>
 
 
 
