--- a/index.html
+++ b/index.html
@@ -66,8 +66,13 @@
 
     <!-- 39_callback.js <label id="label"></label> -->
 
+    <!-- 45_function_expression     <label id="label">0</label>
+                                    <button id="decrease">decrease</button>
+                                    <button id="increase">increase</button> -->
 
-    <script src="44_sort_array_of_number.js"></script>
+    <!-- 49_closure.js         <button id="login">login</button> -->
+
+    <script src="50_maps.js"></script>
 
 
 
