--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <!-- 49_closure.js         <button id="login">login</button> -->
 
-    <script src="50_maps.js"></script>
+    <script src="60_array_of_object.js"></script>
 
 
 
