--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
 
     <!-- 49_closure.js         <button id="login">login</button> -->
 
-    <script src="60_array_of_object.js"></script>
+    <!-- 63_setTimeout().js     <button id="button">buy</button> -->
+
+    <!-- 65_date_object.js      <label id="mylabel"></label> -->
+
+    <!-- 66_clock_program.js    <label id="label"></label> -->
+
+    <script src="70_async.js"></script>
 
 
 
