--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- <link rel="stylesheet" href="78_style.css"> -->
     <!-- <link rel="stylesheet" href="79_style.css"> -->
     <!-- <link rel="stylesheet" href="80_style.css"> -->
+    <!-- <link rel="stylesheet" href="81_style..css"> -->
+    <!-- <link rel="stylesheet" href="82_style.css"> -->
+    <!-- <link rel="stylesheet" href="83_style.css"> -->
 
 
 
@@ -149,9 +152,14 @@
     <!-- <image id="myimg" src="image1.jpg" style="visibility: hidden;"></image>  -->
     <!-- <p>press the button</p> -->
 
+    <!-- 81_detect_key_presses.js       <div id="mydiv"></div> -->
 
+    <!--82_animation.js         <button id="mybutton">begin</button>
+                                <div id="mydiv"></div> -->
 
-    <script src="80_show_hide_html_element.js"></script>
+    <!-- 83_canvas_API.js       <canvas id="mycanvas" width="200" height="200"></canvas> -->
+
+    <script src="83_canvas_API.js"></script>
 
     
 </body>
