--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- <link rel="stylesheet" href="81_style..css"> -->
     <!-- <link rel="stylesheet" href="82_style.css"> -->
     <!-- <link rel="stylesheet" href="83_style.css"> -->
+    <!-- <link rel="stylesheet" href="84_style.css"> -->
 
 
 
@@ -159,7 +160,11 @@
 
     <!-- 83_canvas_API.js       <canvas id="mycanvas" width="200" height="200"></canvas> -->
 
-    <script src="83_canvas_API.js"></script>
+    <!-- 84_window.js           <div id="mydiv"></div> 
+    <button id="mybutton">button</button> -->
+
+
+    <script src="84_window.js"></script>
 
     
 </body>
